# sample_and_graph

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format_all.sh
include/: Acquisition.hpp  Application.hpp  Chart.hpp  Communication.hpp  Device.hpp  Helpers.hpp  MainWindow.hpp  Serializer.hpp  Window.hpp  lsignal.hpp
res/: config.txt
src/: Acquisition.cpp  Application.cpp  Chart.cpp  Communication.cpp  Device.cpp  Helpers.cpp  MainWindow.cpp  Window.cpp  main.cpp
